--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,6 @@
 .badge{
   @apply bg-orange-100 text-black text-xs uppercase  rounded-full p-2 absolute top-0 ml-2 mt-2;
 }
+.btnstyle{
+  @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider
+}
